--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div id="modal" class="modal">
               <div class="icons">
                 <span class="uppercase">Share</span>
-                <a href="facebook.com"><img src="images/icon-facebook.svg" alt="facebook logo" title="facebook logo"></a>
-                <a href="twitter.com"><img src="images/icon-twitter.svg" alt="twitter logo" title="twitter logo"></a>
-                <a href="https://pinterest.com"><img src="images/icon-pinterest.svg" alt="pinterest logo" title="pinterest logo"></a>
+                <a href="facebook.com"><img src="./images/icon-facebook.svg" alt="facebook logo" title="facebook logo"></a>
+                <a href="twitter.com"><img src="./images/icon-twitter.svg" alt="twitter logo" title="twitter logo"></a>
+                <a href="https://pinterest.com"><img src="./images/icon-pinterest.svg" alt="pinterest logo" title="pinterest logo"></a>
               </div>
               <button class="button button-close"  onclick="openPop()"><img src="images/icon-share.svg" alt="share icon" title="share icon"></button>
             </div>
